# UGC_service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg  storage-investigation-results.md
.github/utils/: telegram.py
.github/workflows/: code-checker.yaml  sanity.yaml
clickhouse/: docker-compose.yml  first.sql  second.sql
clickhouse_bench/: Dockerfile  load_test_ch.py  requirements.txt
clickhouse_bench/config/: conf.py
etl-kafka-ch/: Dockerfile  docker-compose.yaml
etl-kafka-ch/init-db/: engine.sh  materialized.sh  target.sh
kafka/: docker-compose-all-in.yaml  docker-compose.yaml  load_test.py
kafka/test_kafka/: Dockerfile  docker-compose.kafka-test.yaml  load_test.py
mongodb/: Dockerfile  configuration.sh  docker-compose-etl.yaml  docker-compose.yaml  mongo_click_etl.py  requirements.txt
nginx/: default.conf
research/: README.md  Vertica_results.html  clickhouse_results.html  eventstore_results.html  kafka_results.html  kafka_results_2.html  storage-investigation-results.md  vertica_results_2.html
research/cassandra_test/: Dockerfile  cassandra_insert_results.html  cassandra_query_results.html  docker-compose.yaml  load_test_insert_cs.py  load_test_query_cs.py
research/clickhouse_bench/: clickhouse_insert_results.html  docker-compose.yaml  load_test_ch.py  load_test_insert.py
research/event_store/: Dockerfile  docker-compose.yaml  load_test_es.py
research/mongodb_test/: Dockerfile  (+6 more)
tests/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt
ugc_api/: .env.example  docker-compose.yaml
(+46 files in other folders)
